# spatial-breast-cancer

./: .gitignore  README.md  environment.yml  pyproject.toml
report/: bioinformatics.tex  main.tex  pandoc_filter.lua  refs.bib
scripts/: build_scrna_reference.py  make_graphical_abstract.py  run_pipeline.sh
src/: 01_qc_preprocessing.py  02_clustering.py  03_deconvolution.py  04_spatially_variable_genes.py  05_neighbourhood_enrichment.py  06_gnn_domain_prediction.py  config.py
